pre dnd changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,7 @@ body::-webkit-scrollbar-thumb {
 .body-no-margin.body-no-margin {
   margin-right: 0 !important;
 }
+
+:root {
+  --font-contract: 'Playfair Display', serif;
+}
