--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,4 +54,5 @@ body::-webkit-scrollbar-thumb {
 
 :root {
   --font-contract: 'Playfair Display', serif;
+  --rpv-default-layout__container-border-color: #ff0000;
 }
